Finally managed to fix icons. Light dark mode work well now

--- a/src/cssFiles/home.css
+++ b/src/cssFiles/home.css
@@ -62,6 +62,7 @@ p{
 
 .assetbutton-logo {
   width: 40px;
+  background-color:var(--bg-color);
   height: auto;
   transition: transform 0.3s ease-in-out;
 }
